# Dipole-Polarisability

./: .gitignore  Average  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  conf.gro  conf.xyz  exe  field  field_atomicunit  field_atomicunit2  field_atomicunit_timestep  frame.xyz  io.cpp  io.h  log  log2  main.cpp  numerics.cpp  run-me.sh  test-coordinates.xyz  test.xyz  traj.xyz
CP2K-comparison/: molecules.xyz
CP2K-extraction/: Makefile  exe  pola_cp2k.cpp  run.sh
CP2K-extraction/test-coordinates/: atom.xyz
SRC/: assign.cpp  birefriengence.cpp  cp2k.cpp  dipol.cpp  dipolparameterization.cpp  io.cpp  main.cpp  molar.cpp  numerics.cpp  pbc.cpp  rdf.cpp  tinker.cpp  velocity.cpp
averages/: 515  Average  Average.cpp  Makefile  ls.sh  run-me.sh  simulate.sh
averages/plot/: Fig1.eps  plot.gp
averages/polarizabilityparameters/: clwater16.099  mgclwater16.099  mgwater16.099  pureliquidwater15.6404  (+2 more)
cp2k-extraction/: 1mg-1h20  1mgcl2-5h2o  1mgcl2-5h2o_old  Total  Total.data  exe  hyper  log  log-1000field  log-mgcl  log-withoutfield  log18  log2  log3  log4  log5  log6  mgcl  mgcl2pulse  pola_cp2k.cpp  ref  run.sh  single-mgcl2  static  water  waterpulse
include/: assign.h  birefriengence.h  cp2k.h  dipol.h  dipolparameterization.h  io.h  molar.h  numerics.h  pbc.h  rdf.h  tinker.h  velocity.h
naveen-work/: ALMO-script.sh
naveen-work/tc-heisenberg/cmake-shell-files/: CMakeLists.txt  shell.sh
pulse/: 100-times-stronger-x.data  1000-times-stronger-x.data  40  5-times-stronger-x.data  9-times-stronger-x.data  Makefile  exe  field_atomicunit300  main.cpp
(+181 files in other folders)
